samples/_failures_safe/1761177573_e956fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f1a9ba1.c: In function ‘print_token’:
./samples/SAFE/__tmp_7f1a9ba1.c:175:12: error: missing terminating " character
  175 |     printf("Line %d, Column %d: %s ('%
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7f1a9ba1.c:175:5: error: expected expression at end of input
  175 |     printf("Line %d, Column %d: %s ('%
      |     ^~~~~~
./samples/SAFE/__tmp_7f1a9ba1.c:175:5: error: expected declaration or statement at end of input
